--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
@@ -160,6 +160,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Airline.cs" />
+    <Compile Include="Models\Flight.cs" />
+    <Compile Include="Models\Reservation.cs" />
+    <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -215,7 +220,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
