--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\FlightsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -170,6 +171,7 @@
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\Review.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
