--- a/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
+++ b/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata/Sistem za rezervaciju avio karata.csproj
@@ -192,6 +192,9 @@
     <Content Include="MainStyle.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Profile.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Register.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
